# pcg-cpp

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CREDITS.md  README.md
.github/workflows/: ci.yml  codeql.yml
include/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
sample/: CMakeLists.txt  check-output.cpp  cppref-sample.cpp  pcg-demo.cpp
test-high/: pcg-test-noadvance.cpp  pcg-test.cpp  run-tests.ps1  run-tests.sh
